Fixed button color / spacing on logged in view

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -119,7 +119,7 @@
 	  -moz-border-radius: 3px;
 	  -webkit-border-radius: 3px;
 	  border-radius: 3px;
-	  color: #ccc;
+	  color: #222;
 	  display: inline-block;
 	  font-size: 11px;
 	  font-weight: bold;
